<resources>
    <string name="app_name">PackingUI</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="welcome_screen">Welcome to the\nPackaging System</string>
    <string name="put_package">Scan Package to System</string>
    <string name="get_package">Search</string>
    <string name="change_package">Scan to Load</string>
    <string name="create_label">Create Label</string>
    <string name="put_pack_text">Scan Package</string>
    <string name="get_pack_text">Search</string>
    <string name="remove_pack_text">Scan to Load</string>
    <string name="scan_pack_text">Create Label</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="enter_package_num">Enter in the Package Number:</string>
    <string name="search_button">Search</string>
    <string name="search_package_page">Search for a Package</string>
    <string name="newLabelHeader">Enter Information for a New Package</string>
    <string name="weight_entry">Enter in the Weight:</string>
    <string name="start_location_entry">Enter in the Starting Location</string>
    <string name="end_location_entry">Enter in the Ending Location</string>
    <string name="create_package">Create Package</string>

</resources>