<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.PackingUI.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TextView
        android:id="@+id/ScanPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/scan_pack_text"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.PackingUI.ActionBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="#24292f"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/header_text"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:paddingTop="0dp"
                android:text="@string/newLabelHeader"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/start_location_entry"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:hint="@string/start_location_entry"
                android:inputType="textNoSuggestions"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/end_location_entry"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:hint="@string/end_location_entry"
                android:inputType="textNoSuggestions"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/weight_entry"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:fontFamily="sans-serif"
                android:hint="@string/weight_entry"
                android:inputType="number|numberDecimal"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/newPackageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_package" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="281dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
