<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.PackingUI.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/welcome_screen"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.PackingUI.ActionBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/putPack"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:text="@string/put_package"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/getPack"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:text="@string/get_package"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/changePack"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:text="@string/change_package"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/createLabel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:text="@string/create_label"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
