<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#24292f"
    android:theme="@style/ThemeOverlay.PackingUI.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TextView
        android:id="@+id/GetPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/get_pack_text"
        android:textColor="?attr/fullscreenTextColor"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.PackingUI.ActionBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#24292f"
            android:orientation="vertical"
            android:visibility="visible"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:paddingTop="0dp"
                android:text="@string/search_package_page"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="188dp"

                android:background="?android:attr/listDivider"
                android:backgroundTint="#24292f" />

            <EditText
                android:id="@+id/search_package_entry"
                android:layout_width="fill_parent"
                android:layout_height="56dp"
                android:hint="@string/enter_package_num"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="100dp"
                android:layout_marginLeft="100dp"
                android:text="@string/search_button" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="301dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="#24292f" />


        </LinearLayout>
    </FrameLayout>

</FrameLayout>
